2001-03-14  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: Regenerated.
	* stamp-h2.in: Ditto.

2001-03-14  Larry Jones  <larry.jones@sdrc.com>

	* commit.c (check_fileproc): Allow adding on the trunk when there's
	an existing non-Attic RCS file as long as the head revision is dead.
	This can happen due to an aborted resurrection.
	(commit_fileproc): When resurrecting, consider the dead revision
	along with the other files' revisions.
	(findmaxrev): Avoid unnecessary work.
	(checkaddfile): Only warn if file isn't in Attic as expected.
	(Reported by Ross Burton <r.burton@180sw.com>.)
	* sanity.sh (basica-r*): New tests for above.
	(basica-o4): Update to match.

2001-03-09  Larry Jones  <larry.jones@sdrc.com>

	* edit.c (edit_fileproc, unedit_fileproc): Some implementations of
	asctime/ctime apparently use a leading zero on the date instead
	of the space required by the C Standard.  Correct for this so that
	shared working directories work without hassle.
	(Reported by David L. Martin <dlmart2@home.com>.)
	* entries.c (fgetentent): Ditto.
	* vers_ts.c (time_stamp_server, time_stamp) Ditto.

2001-03-07  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (basica, binfiles2, head, admin): Update to match
	change to admin.c.

2001-03-06  Larry Jones  <larry.jones@sdrc.com>

	* client.c (recv_bytes): Handle EOF as in recv_line().
	(Reported by Pavel Roskin <proski@gnu.org>.)

	* admin.c (admin_fileproc): Change final error message to clarify
	that CVS refused to modify the RCS file rather than being unable to.

2001-02-28  Jim Meyering  <meyering@lucent.com>

	* commit.c (commit_usage): Use `-F logfile' (rather than -F file') in
	the description of that option, to be consistent with the `-F logfile'
	in the Usage: line.  Use spaces instead of TAB characters, and realign.

2001-03-02  Derek Price  <derek.price@openavenue.com>

	* sanity.sh (crerepos): Make failed ${CVS_RSH-rsh} attempt print the
	name of the command it actually used rather than 'rsh'.
